# sim2real-av-bias-audit

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: README_RUN.md  sample_real.csv  sample_report.md  sample_sim.csv
src/sim2real/: __init__.py  cli.py  config.py
src/sim2real/data/: __init__.py  loaders.py  schema.py  synthetic.py
src/sim2real/report/: __init__.py  build_report.py
src/sim2real/safety/: __init__.py  events.py  rate_compare.py
src/sim2real/shift/: __init__.py  divergence.py  domain_classifier.py  reweighting.py  slicing.py
src/sim2real/viz/: __init__.py  plots.py
src/sim2real_av_bias_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_divergence.py  test_pipeline.py  test_rate_compare.py  test_reweighting.py  test_schema.py
