[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim2real-av-bias-audit"
version = "0.1.0"
description = "Toolkit for auditing simulator vs real-world AV log differences"
readme = "README.md"
authors = [{ name = "Waymo Research", email = "av@waymo.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.5",
    "matplotlib>=3.8",
    "pydantic>=2.5",
    "typer>=0.9",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
sim2real = "sim2real.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
